try create task issue on mobile

--- a/src/components/taskcreate.css
+++ b/src/components/taskcreate.css
@@ -809,7 +809,6 @@
     }
     .editable-input-container {
         pointer-events: auto;
-        z-index: 9999;
       }
       
     
